# docker-demo

./: Dockerfile  LICENSE  README.md  pyproject.toml
demo/: demo.py
test/: test_demo.py
test_data/: expected.bed  file1.bed  file2.bed
