[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Demo script for a docker tutorial"
authors = ["Øyvind Almelid <oyvind.almelid@igmm.ed.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
pyranges = "^0.0.92"
pytest = "^6.2.2"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pylint = "^2.7.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
